build_files/lib/error/test/lib/str/sources/str.c
/*
** EPITECH PROJECT, 2025
** str - str.c
** File description:
** <description>
*/

#include "../includes/str.h"

void str_exist(void)
{
}
